deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <PROJECTNAME>-ns-ingress
  namespace: <PROJECTNAME>
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
            path: /
            pathType: Prefix
            backend:
              service:
                name: <PROJECTNAME>-service  # This matches the service created in 'service.yml'
                port:
                  name: svc-port
                  number: 8080
